[gd_scene load_steps=2 format=2]

[ext_resource path="res://SubBoard.gd" type="Script" id=1]

[node name="SubBoard" type="GridContainer"]
margin_right = 40.0
margin_bottom = 40.0
columns = 3
script = ExtResource( 1 )

[node name="Button0" type="Button" parent="."]
margin_right = 25.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )

[node name="Button1" type="Button" parent="."]
margin_left = 29.0
margin_right = 54.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )

[node name="Button2" type="Button" parent="."]
margin_left = 58.0
margin_right = 83.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )

[node name="Button3" type="Button" parent="."]
margin_top = 29.0
margin_right = 25.0
margin_bottom = 54.0
rect_min_size = Vector2( 25, 25 )

[node name="Button4" type="Button" parent="."]
margin_left = 29.0
margin_top = 29.0
margin_right = 54.0
margin_bottom = 54.0
rect_min_size = Vector2( 25, 25 )

[node name="Button5" type="Button" parent="."]
margin_left = 58.0
margin_top = 29.0
margin_right = 83.0
margin_bottom = 54.0
rect_min_size = Vector2( 25, 25 )

[node name="Button6" type="Button" parent="."]
margin_top = 58.0
margin_right = 25.0
margin_bottom = 83.0
rect_min_size = Vector2( 25, 25 )

[node name="Button7" type="Button" parent="."]
margin_left = 29.0
margin_top = 58.0
margin_right = 54.0
margin_bottom = 83.0
rect_min_size = Vector2( 25, 25 )

[node name="Button8" type="Button" parent="."]
margin_left = 58.0
margin_top = 58.0
margin_right = 83.0
margin_bottom = 83.0
rect_min_size = Vector2( 25, 25 )

[connection signal="pressed" from="Button0" to="." method="_on_Button0_pressed"]
[connection signal="pressed" from="Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="Button7" to="." method="_on_Button7_pressed"]
[connection signal="pressed" from="Button8" to="." method="_on_Button8_pressed"]
